tests/NormalTests/paczka1/small_fuzzy/53223429.err
Error in line 8: A44 A324 29,8
Error in line 5: d16lBh S504 39,8
